# app/internal/modules/catalog/product/entity/admin-api/product.go
@@ -15,18 +15,16 @@ const (
 
 type (
 	Product struct { // DB: ps_catalog.products
-		ID         mrtype.KeyInt32 `json:"id"`                                   // product_id
-		TagVersion int32           `json:"tagVersion"`                           // tag_version
-		CreatedAt  time.Time       `json:"createdAt" sort:"createdAt"`           // created_at
-		UpdatedAt  *time.Time      `json:"updatedAt,omitempty" sort:"updatedAt"` // updated_at
-
-		CategoryID  uuid.UUID           `json:"categoryId" upd:"category_id"` // ps_catalog.categories::category_id
-		Article     string              `json:"article" sort:"article" upd:"product_article"`
-		Caption     string              `json:"caption" sort:"caption,default" upd:"product_caption"`
-		TrademarkID mrtype.KeyInt32     `json:"trademarkId" upd:"trademark_id"`         // ps_catalog.trademarks::trademark_id
-		Price       entity_shared.Money `json:"price" sort:"price" upd:"product_price"` // (coins)
-
-		Status mrenum.ItemStatus `json:"status"` // product_status
+		ID          mrtype.KeyInt32      `json:"id"` // product_id
+		TagVersion  int32                `json:"tagVersion"`
+		CategoryID  uuid.UUID            `json:"categoryId" upd:"category_id" upd:"category_id"` // categories::category_id
+		Article     string               `json:"article" sort:"article" upd:"product_article"`
+		Caption     string               `json:"caption" sort:"caption,default" upd:"product_caption"`
+		TrademarkID mrtype.KeyInt32      `json:"trademarkId" upd:"trademark_id"`         // trademarks::trademark_id
+		Price       *entity_shared.Money `json:"price" sort:"price" upd:"product_price"` // (coins)
+		Status      mrenum.ItemStatus    `json:"status"`
+		CreatedAt   time.Time            `json:"createdAt" sort:"createdAt"`
+		UpdatedAt   *time.Time           `json:"updatedAt,omitempty" sort:"updatedAt"`
 	}
 
 	ProductParams struct {
